<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">



    <FrameLayout
        android:id="@+id/frameStacklogin"
        style="@style/groupStylecyan_700"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameIPhone13mini"
            style="@style/groupStylecyan_700"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <LinearLayout
                android:id="@+id/linearColumnlogin"
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:layout_marginTop="210dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtLogin"
                    style="@style/txtInterblack25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_60pxv"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_login"
                    tools:text="@string/lbl_login" />

                <LinearLayout
                    android:id="@+id/linearRowicons8email"
                    style="@style/groupStylebluegray_100_51cornerRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_44pxv"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageIcons8email"
                        android:layout_width="@dimen/_28pxh"
                        android:layout_height="@dimen/_27pxh"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_marginBottom="@dimen/_11pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_icons8email64"
                        tools:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:layout_marginStart="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_150pxh"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_weight="1.75"
                        android:ellipsize="end"
                        android:hint="email"
                        android:background="@null"
                        android:singleLine="true" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearRowicons8password"
                    style="@style/groupStylebluegray_100_51cornerRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_44pxv"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageIcons8password"
                        android:layout_width="@dimen/_28pxh"
                        android:layout_height="@dimen/_27pxh"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_marginBottom="@dimen/_11pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_icons8password"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_icons8password" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:layout_marginStart="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_150pxh"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_weight="1.75"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="Password"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearRowreset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_reset"
                        style="@style/btnSolidRoundedOutline"
                        android:layout_width="@dimen/_82pxh"
                        android:layout_height="@dimen/_32pxv"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingStart="@dimen/_21pxh"
                        android:paddingTop="@dimen/_6pxv"
                        android:paddingEnd="@dimen/_19pxh"
                        android:paddingBottom="@dimen/_6pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_reset"
                        android:textAllCaps="false"
                        tools:text="@string/lbl_reset" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_submit"
                        style="@style/btnSolidRounded_1"
                        android:layout_width="@dimen/_82pxh"
                        android:layout_height="@dimen/_32pxv"
                        android:layout_marginStart="@dimen/_64pxh"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingStart="@dimen/_21pxh"
                        android:paddingTop="@dimen/_6pxv"
                        android:paddingEnd="@dimen/_20pxh"
                        android:paddingBottom="@dimen/_6pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_login"
                        android:textAllCaps="false"
                        tools:text="@string/lbl_login" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtFORGOTYOURPAS"
                    style="@style/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_36pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_marginEnd="@dimen/_36pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/msg_forgot_your_pas"
                    tools:text="@string/msg_forgot_your_pas" />

                <FrameLayout
                    android:id="@+id/frameStackorloginwith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_26pxv"
                    android:layout_marginEnd="@dimen/_35pxh">

                    <TextView
                        android:id="@+id/txtOrLoginWith"
                        style="@style/txtInterbold15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:ellipsize="end"
                        android:gravity="top|start"
                        android:singleLine="true"
                        android:text="@string/lbl_or_login_with"
                        tools:text="@string/lbl_or_login_with" />

                    <TextView
                        android:id="@+id/txtOrLoginWithOne"
                        style="@style/txtInterbold15_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:ellipsize="end"
                        android:gravity="top|start"
                        android:singleLine="true"
                        android:text="@string/lbl_or_login_with"
                        tools:text="@string/lbl_or_login_with" />
                </FrameLayout>


                <LinearLayout
                    android:id="@+id/switchsignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_29pxv"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:layout_marginBottom="@dimen/_49pxv"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtNewToPetWorl"
                        style="@style/txtInterbold13"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.69"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/msg_new_to_pet_worl"
                        tools:text="@string/msg_new_to_pet_worl" />

                    <TextView
                        android:id="@+id/txtLanguage"
                        style="@style/txtInterbold13_1"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.31"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/lbl_register"
                        tools:text="@string/lbl_register" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtWelcomeBack"
                style="@style/txtInterblack24"
                android:layout_width="wrap_content"
                android:layout_height="123dp"
                android:layout_gravity="top|start"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_63pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginBottom="@dimen/_63pxv"
                android:text="@string/lbl_welcome_back"
                tools:text="@string/lbl_welcome_back" />

            <ImageView
                android:id="@+id/imageAboutOne"
                android:layout_width="168dp"
                android:layout_height="142dp"
                android:layout_gravity="top|end"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_118pxv"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginBottom="@dimen/_118pxv"
                android:scaleType="fitXY"
                android:src="@drawable/img_about1"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_about1" />

            <LinearLayout
                android:id="@+id/linearRowicons8dogpaw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:orientation="horizontal">
                <ImageView android:id="@+id/imageIcons8dogpaw"
                    android:layout_height="@dimen/_45pxh"
                    android:layout_marginBottom="@dimen/_21pxv"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="@dimen/_48pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_icons8dogpaw_45x48"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_icons8dogpaw_45x48"/>
                <ImageView android:id="@+id/imageIcons8dogpawOne"
                    android:layout_height="@dimen/_83pxh"
                    android:layout_marginStart="@dimen/_69pxh"
                    android:layout_width="@dimen/_86pxh"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_icons8dogpaw_83x86"/>

            </LinearLayout>

            <ImageView android:id="@+id/imageIcons8dogpawTwo"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_101pxh"
                android:layout_marginBottom="@dimen/_194pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_194pxv"
                android:layout_width="@dimen/_73pxh"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" tools:src="@drawable/img_icons8dogpaw_101x73"/>

        </FrameLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
